# BugBrain_AI

./: .env copy  .env.example  .gitignore  Data Science Work.code-workspace  GenAI_Report_AS1568_UC20.md  Makefile  Problem Statement.md  README.md  __init__.py  guide.md  implementation_plan.md  main.py  package-lock.json  package.json  pyproject copy.toml  pyproject.toml  requirements.txt  task.md  temp.ipynb  walkthrough.md
.github/workflows/: ci.yml
.streamlit/: config.toml
Data/: README.md  bug_report.csv
Data/processed/: README.md  evaluation_results.json  processed_bug_reports.json
Data/raw/: README.md  processed_bug_report.csv
Data/temp/: README.md
Data/vector_store/: README.md  index.faiss  index.pkl
Validation Data/: Validation Input.md
docs/: README.md  api_reference.md  architecture.md
notebooks/: README.md
scripts/: README.md  build_vector_index.py  load_csv_data.py  load_json_data.py  setup_env.sh
src/: README.md  __init__.py
src/agents/: README.md  __init__.py  agent.py  extraction_agent.py  orchestrator.py  triage_agent.py
src/config/: README.md  __init__.py  settings.py
src/duplicate_detection/: README.md  __init__.py  embeddings.py  similarity.py  vector_store.py
src/policies/: README.md  severity_policy.yaml  team_routing.yaml
src/preprocessing/: README.md  __init__.py  log_parser.py  noise_filter.py  text_cleaner.py
src/prompts/: README.md  __init__.py  evaluation_prompts.py  extraction_prompts.py  (+2 more)
tests/: README.md  __init__.py  benchmark_pipeline.py  run_evaluation.py  test_pipeline_backend.py  test_retrievers.py
(+57 files in other folders)
