[project]
name = "uc20-bug-report-summarizer"
version = "0.1.0"
description = "AI-powered agent to filter noise, standardize formatting, and perform automated triage for unstructured bug reports."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.12",
    "pandas>=3.0.1",
    "ruff>=0.15.6",
]
