[project]
name = "uc20-bug-report-summarizer"
version = "0.1.0"
description = "AI-powered agent to filter noise, standardize formatting, and perform automated triage for unstructured bug reports."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "black>=26.3.1",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.11",
    "langgraph-cli>=0.4.17",
    "pandas<3",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "streamlit==1.55.0",
    "uvicorn>=0.42.0",
]
